# rpi-led-matrix-rs

./: .gitmodules  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  build.rs  sync.rs  sync.toml
examples/: example_utils.rs  graphics.rs  kitchen-sink.rs  minimal.rs  mono-fonts.rs  ttf-fonts.rs
src/: c.rs  canvas.rs  led.rs  lib.rs  matrix.rs  matrix_options.rs  option_types.rs  options.rs  runtime_options.rs
tools/: Cargo.toml
