[workspace]
members = [
  "tools"
]

[package]
name = "rpi_led_matrix"
version = "0.1.0"
authors = ["Alex Eden <alexandereden91@gmail.com>"]
links = "rgbmatrix"
edition = "2018"

[dependencies]
embedded-graphics = "0.6.2"
libc = "0.2.77"
num_enum = "0.5.1"
rusttype = "0.9.2"

[build-dependencies]
cc = "1.0.60"
